seng6245.muse/src/abc/AbcMusicParser.java
// Generated from AbcMusic.g4 by ANTLR 4.5.2

package abc;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AbcMusicParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, NEWLINE=2, COMMENT=3, HEADER_INDEX=4, HEADER_TITLE=5, HEADER_COMPOSER=6, 
		HEADER_LENGTH=7, HEADER_METER=8, HEADER_TEMPO=9, HEADER_VOICE=10, HEADER_KEY=11, 
		NOTE=12, REST=13, DUPLET=14, TRIPLET=15, QUADRUPLET=16, BAR_LINE=17, CHORD_OPEN=18, 
		CHORD_CLOSE=19, REPEAT_BEGIN=20, REPEAT_END=21, REPEAT_ONE=22, REPEAT_TWO=23, 
		END_MAJOR_SECTION=24;
	public static final int
		RULE_composition = 0, RULE_music_header = 1, RULE_header_index = 2, RULE_header_title = 3, 
		RULE_optional_headers = 4, RULE_header_composer = 5, RULE_header_length = 6, 
		RULE_header_meter = 7, RULE_header_tempo = 8, RULE_header_voice = 9, RULE_header_key = 10, 
		RULE_music_body = 11, RULE_line = 12, RULE_bar = 13, RULE_note_type = 14, 
		RULE_note = 15, RULE_rest = 16, RULE_chord = 17, RULE_duplet = 18, RULE_triplet = 19, 
		RULE_quadruplet = 20;
	public static final String[] ruleNames = {
		"composition", "music_header", "header_index", "header_title", "optional_headers", 
		"header_composer", "header_length", "header_meter", "header_tempo", "header_voice", 
		"header_key", "music_body", "line", "bar", "note_type", "note", "rest", 
		"chord", "duplet", "triplet", "quadruplet"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "'['", "']'", null, null, "'[1'", 
		"'[2'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WHITESPACE", "NEWLINE", "COMMENT", "HEADER_INDEX", "HEADER_TITLE", 
		"HEADER_COMPOSER", "HEADER_LENGTH", "HEADER_METER", "HEADER_TEMPO", "HEADER_VOICE", 
		"HEADER_KEY", "NOTE", "REST", "DUPLET", "TRIPLET", "QUADRUPLET", "BAR_LINE", 
		"CHORD_OPEN", "CHORD_CLOSE", "REPEAT_BEGIN", "REPEAT_END", "REPEAT_ONE", 
		"REPEAT_TWO", "END_MAJOR_SECTION"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AbcMusic.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AbcMusicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompositionContext extends ParserRuleContext {
		public Music_headerContext music_header() {
			return getRuleContext(Music_headerContext.class,0);
		}
		public Music_bodyContext music_body() {
			return getRuleContext(Music_bodyContext.class,0);
		}
		public TerminalNode EOF() { return getToken(AbcMusicParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(AbcMusicParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(AbcMusicParser.NEWLINE, i);
		}
		public CompositionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_composition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).enterComposition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).exitComposition(this);
		}
	}

	public final CompositionContext composition() throws RecognitionException {
		CompositionContext _localctx = new CompositionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_composition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			music_header();
			setState(43);
			music_body();
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(44);
				match(NEWLINE);
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Music_headerContext extends ParserRuleContext {
		public Header_indexContext header_index() {
			return getRuleContext(Header_indexContext.class,0);
		}
		public Header_titleContext header_title() {
			return getRuleContext(Header_titleContext.class,0);
		}
		public Header_keyContext header_key() {
			return getRuleContext(Header_keyContext.class,0);
		}
		public List<Optional_headersContext> optional_headers() {
			return getRuleContexts(Optional_headersContext.class);
		}
		public Optional_headersContext optional_headers(int i) {
			return getRuleContext(Optional_headersContext.class,i);
		}
		public Music_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_music_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).enterMusic_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).exitMusic_header(this);
		}
	}

	public final Music_headerContext music_header() throws RecognitionException {
		Music_headerContext _localctx = new Music_headerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_music_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			header_index();
			setState(53);
			header_title();
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT) | (1L << HEADER_COMPOSER) | (1L << HEADER_LENGTH) | (1L << HEADER_METER) | (1L << HEADER_TEMPO) | (1L << HEADER_VOICE))) != 0)) {
				{
				{
				setState(54);
				optional_headers();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			header_key();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_indexContext extends ParserRuleContext {
		public TerminalNode HEADER_INDEX() { return getToken(AbcMusicParser.HEADER_INDEX, 0); }
		public Header_indexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_index; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).enterHeader_index(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).exitHeader_index(this);
		}
	}

	public final Header_indexContext header_index() throws RecognitionException {
		Header_indexContext _localctx = new Header_indexContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header_index);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(HEADER_INDEX);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_titleContext extends ParserRuleContext {
		public TerminalNode HEADER_TITLE() { return getToken(AbcMusicParser.HEADER_TITLE, 0); }
		public Header_titleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).enterHeader_title(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).exitHeader_title(this);
		}
	}

	public final Header_titleContext header_title() throws RecognitionException {
		Header_titleContext _localctx = new Header_titleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_header_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(HEADER_TITLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Optional_headersContext extends ParserRuleContext {
		public Header_composerContext header_composer() {
			return getRuleContext(Header_composerContext.class,0);
		}
		public Header_lengthContext header_length() {
			return getRuleContext(Header_lengthContext.class,0);
		}
		public Header_meterContext header_meter() {
			return getRuleContext(Header_meterContext.class,0);
		}
		public Header_tempoContext header_tempo() {
			return getRuleContext(Header_tempoContext.class,0);
		}
		public Header_voiceContext header_voice() {
			return getRuleContext(Header_voiceContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(AbcMusicParser.COMMENT, 0); }
		public Optional_headersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optional_headers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).enterOptional_headers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).exitOptional_headers(this);
		}
	}

	public final Optional_headersContext optional_headers() throws RecognitionException {
		Optional_headersContext _localctx = new Optional_headersContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_optional_headers);
		try {
			setState(72);
			switch (_input.LA(1)) {
			case HEADER_COMPOSER:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				header_composer();
				}
				break;
			case HEADER_LENGTH:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				header_length();
				}
				break;
			case HEADER_METER:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				header_meter();
				}
				break;
			case HEADER_TEMPO:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				header_tempo();
				}
				break;
			case HEADER_VOICE:
				enterOuterAlt(_localctx, 5);
				{
				setState(70);
				header_voice();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 6);
				{
				setState(71);
				match(COMMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_composerContext extends ParserRuleContext {
		public TerminalNode HEADER_COMPOSER() { return getToken(AbcMusicParser.HEADER_COMPOSER, 0); }
		public Header_composerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_composer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).enterHeader_composer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).exitHeader_composer(this);
		}
	}

	public final Header_composerContext header_composer() throws RecognitionException {
		Header_composerContext _localctx = new Header_composerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_header_composer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(HEADER_COMPOSER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_lengthContext extends ParserRuleContext {
		public TerminalNode HEADER_LENGTH() { return getToken(AbcMusicParser.HEADER_LENGTH, 0); }
		public Header_lengthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_length; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).enterHeader_length(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).exitHeader_length(this);
		}
	}

	public final Header_lengthContext header_length() throws RecognitionException {
		Header_lengthContext _localctx = new Header_lengthContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_header_length);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(HEADER_LENGTH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_meterContext extends ParserRuleContext {
		public TerminalNode HEADER_METER() { return getToken(AbcMusicParser.HEADER_METER, 0); }
		public Header_meterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_meter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).enterHeader_meter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).exitHeader_meter(this);
		}
	}

	public final Header_meterContext header_meter() throws RecognitionException {
		Header_meterContext _localctx = new Header_meterContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_header_meter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(HEADER_METER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_tempoContext extends ParserRuleContext {
		public TerminalNode HEADER_TEMPO() { return getToken(AbcMusicParser.HEADER_TEMPO, 0); }
		public Header_tempoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_tempo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).enterHeader_tempo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).exitHeader_tempo(this);
		}
	}

	public final Header_tempoContext header_tempo() throws RecognitionException {
		Header_tempoContext _localctx = new Header_tempoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_header_tempo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(HEADER_TEMPO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_voiceContext extends ParserRuleContext {
		public TerminalNode HEADER_VOICE() { return getToken(AbcMusicParser.HEADER_VOICE, 0); }
		public Header_voiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_voice; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).enterHeader_voice(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).exitHeader_voice(this);
		}
	}

	public final Header_voiceContext header_voice() throws RecognitionException {
		Header_voiceContext _localctx = new Header_voiceContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_header_voice);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(HEADER_VOICE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_keyContext extends ParserRuleContext {
		public TerminalNode HEADER_KEY() { return getToken(AbcMusicParser.HEADER_KEY, 0); }
		public Header_keyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_key; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).enterHeader_key(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).exitHeader_key(this);
		}
	}

	public final Header_keyContext header_key() throws RecognitionException {
		Header_keyContext _localctx = new Header_keyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_header_key);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(HEADER_KEY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Music_bodyContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public List<Header_voiceContext> header_voice() {
			return getRuleContexts(Header_voiceContext.class);
		}
		public Header_voiceContext header_voice(int i) {
			return getRuleContext(Header_voiceContext.class,i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(AbcMusicParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(AbcMusicParser.COMMENT, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(AbcMusicParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(AbcMusicParser.NEWLINE, i);
		}
		public Music_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_music_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).enterMusic_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).exitMusic_body(this);
		}
	}

	public final Music_bodyContext music_body() throws RecognitionException {
		Music_bodyContext _localctx = new Music_bodyContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_music_body);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(95); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(95);
					switch (_input.LA(1)) {
					case NEWLINE:
					case NOTE:
					case REST:
					case DUPLET:
					case TRIPLET:
					case QUADRUPLET:
					case BAR_LINE:
					case CHORD_OPEN:
					case REPEAT_BEGIN:
					case REPEAT_ONE:
					case REPEAT_TWO:
						{
						setState(86);
						line();
						}
						break;
					case HEADER_VOICE:
						{
						setState(87);
						header_voice();
						setState(91);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
						while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
							if ( _alt==1 ) {
								{
								{
								setState(88);
								match(NEWLINE);
								}
								} 
							}
							setState(93);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
						}
						}
						break;
					case COMMENT:
						{
						setState(94);
						match(COMMENT);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(97); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(AbcMusicParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(AbcMusicParser.NEWLINE, i);
		}
		public List<BarContext> bar() {
			return getRuleContexts(BarContext.class);
		}
		public BarContext bar(int i) {
			return getRuleContext(BarContext.class,i);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).exitLine(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_line);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(99);
				match(NEWLINE);
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(105);
					bar();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(108); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(113);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(110);
					match(NEWLINE);
					}
					} 
				}
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BarContext extends ParserRuleContext {
		public List<Note_typeContext> note_type() {
			return getRuleContexts(Note_typeContext.class);
		}
		public Note_typeContext note_type(int i) {
			return getRuleContext(Note_typeContext.class,i);
		}
		public TerminalNode REPEAT_BEGIN() { return getToken(AbcMusicParser.REPEAT_BEGIN, 0); }
		public TerminalNode REPEAT_ONE() { return getToken(AbcMusicParser.REPEAT_ONE, 0); }
		public TerminalNode REPEAT_TWO() { return getToken(AbcMusicParser.REPEAT_TWO, 0); }
		public List<TerminalNode> BAR_LINE() { return getTokens(AbcMusicParser.BAR_LINE); }
		public TerminalNode BAR_LINE(int i) {
			return getToken(AbcMusicParser.BAR_LINE, i);
		}
		public TerminalNode END_MAJOR_SECTION() { return getToken(AbcMusicParser.END_MAJOR_SECTION, 0); }
		public TerminalNode NEWLINE() { return getToken(AbcMusicParser.NEWLINE, 0); }
		public TerminalNode REPEAT_END() { return getToken(AbcMusicParser.REPEAT_END, 0); }
		public BarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).enterBar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AbcMusicListener ) ((AbcMusicListener)listener).exitBar(this);
		}
	}

	public final BarContext bar() throws RecognitionException {
		BarContext _localctx = new BarContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_bar);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BAR_LINE) | (1L << REPEAT_BEGIN) | (1L << REPEAT_ONE) | (1L << REPEAT_TWO))) != 0)) {
				{
				setState(116);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BAR_LINE) | (1L << REPEAT_BEGIN) | (1L << REPEAT_ONE) | (1L << REPEAT_TWO))) != 0)) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
			}

			setState(120); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(119);
					note_type();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(122); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(124);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEWLINE) | (1L << BAR_LINE) | (1L << REPEAT_END) | (1L << END_MAJOR_SECTION))) != 0)) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
